--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "myconnection": "Server=DESKTOP-91MF13G;Database=Bikestore;Integrated Security=true;TrustServerCertificate=true;"
+  },
+  "JWT": {
+    "Key": "MySuperSecretKey12345AlgorithmsABCDEFGHIJ4657678954hdjs",
+    "Issuer": "MyIssuer",
+    "Audience": "MyAudience"
   }
 }
